<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pizza_App</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Desc">Welcome</string>
    <string name="title_activity_main_activity2">My Order</string>
    <string name="Button1">BILL</string>
    <string name="Button2">MY ORDER</string>
    <string name="Button3">VEG PIZZAS</string>
    <string name="Button4">NON VEG PIZZAS</string>
    <string name="Button5">SIDE ORDERS</string>
    <string name="Button6">ORDERED ITEMS</string>
    <string name="Name">Pizza</string>
    <string name="Age">Price</string>
    <string name="title_activity_main_activity3">VEG PIZZAS</string>
    <string name="imageview1">Image</string>
    <string name="textview1">Text</string>
    <string name="title_activity_main_activity4">N.VEG PIZZAS</string>
    <string name="title_activity_main_activity5">MainActivity5</string>
    <string name="title_activity_main_activity6">MainActivity6</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_main_activity2001">MY ORDER</string>
    <string name="title_activity_main_activity2002">MainActivity2002</string>
    <string name="title_activity_main_activity2003">MainActivity2003</string>
    <string name="title_activity_main_activity2004">MainActivity2004</string>
    <string name="title_activity_main_activity2005">Country Special</string>
    <string name="Desc1">COUNTRY SPECIAL</string>
    <string name="cs">For all those with a partiality for veggies, this one\'s loaded - crunchy onions, crisp capsicum and fresh juicy tomatoes. Yum!</string>
    <string name="Button7">ORDER</string>
    <string name="csp">Rs 120</string>
    <string name="title_activity_main_activity2006">Margherita</string>
    <string name="Desc2">Margherita</string>
    <string name="mg">The ever-popular Margherita - loaded with extra cheese &#8230; oodies of it!</string>
    <string name="mgp">Rs 100</string>
    <string name="Button8">ORDER</string>
    <string name="title_activity_main_activity2007">Veg Extravaganza</string>
    <string name="Desc3">Veg Extravaganza</string>
    <string name="vex">A pizza that decidedly staggers under an overload of golden corn, exotic black olives, crunchy onions, crisp capsicum, succulent mushrooms, juicyfresh tomatoes and jalapeno - with extra cheese to go all around.</string>
    <string name="vexp">Rs 140</string>
    <string name="Button9">ORDER</string>
    <string name="title_activity_main_activity2008">Delux Veggie</string>
    <string name="Desc4">Delux Veggie</string>
    <string name="dveg">For a vegetarian looking for a BIG treat that goes easy on the spices, this one\'s got it all&#8230; The onions, the capsicum, those delectable mushrooms - with paneer and golden corn to top it all.</string>
    <string name="dvegp">Rs 120</string>
    <string name="Button10">ORDER</string>
    <string name="title_activity_main_activity2009">Spicy Delight</string>
    <string name="Desc5">Spicy Delight</string>
    <string name="spd">Spicy Delight Pizza is an exotic pizza which has a combination of Golden Corn, Jalapeño and Red Paprika as toppings</string>
    <string name="spdp">Rs 140</string>
    <string name="Button11">ORDER</string>
    <string name="title_activity_main_activity2016">Garlic Breadstick</string>
    <string name="Desc6">Garlic Breadstick</string>
    <string name="gb">The endearing tang of garlic in breadstics baked to perfection.</string>
    <string name="gbp">Rs 90</string>
    <string name="Button19">ORDER</string>
    <string name="title_activity_main_activity2017">Calzone Non Veg</string>
    <string name="Desc7">Calzone Non Veg</string>
    <string name="cnv">Soft,juicy and spicy pockets filled with Barbecue Chicken ,red paprika ,onion and capsicum, rolled over a cheesy layer and hot sauce.</string>
    <string name="cnvp">Rs 75</string>
    <string name="Button20">ORDER</string>
    <string name="title_activity_main_activity2018">Calzone Veg</string>
    <string name="Desc8">Calzone Non Veg</string>
    <string name="cv">Soft, juicy and spicy pockets filled with Paneer ,red paprika ,onion and capsicum, rolled over a cheesy layer and hot sauce.</string>
    <string name="cvp">Rs 55</string>
    <string name="Button21">ORDER</string>
    <string name="title_activity_main_activity2019">Taco Indiana</string>
    <string name="Desc9">Taco Indiana</string>
    <string name="ti">Dig into its oregano sprinkled crispy crust to discover a cheesy layer over spicy veg stuffings.</string>
    <string name="tip">Rs 110</string>
    <string name="Button22">ORDER</string>
    <string name="title_activity_main_activity2020">Cheese Dip</string>
    <string name="Desc10">Cheese Dip</string>
    <string name="cd">Dig into its oregano sprinkled crispy crust to discover a cheesy layer over spicy veg stuffings.</string>
    <string name="cdp">Rs 20</string>
    <string name="Button23">ORDER</string>
    <string name="title_activity_main_activity2010">Golden Delight</string>
    <string name="Desc20">Golden Delight</string>
    <string name="gld">Mmm! Barbeque chicken with a topping of golden corn loaded with extra cheese. Worth its weight in gold!</string>
    <string name="gldp">Rs 220</string>
    <string name="Button30">ORDER</string>
    <string name="title_activity_main_activity2011">Barbecue Chicken</string>
    <string name="Desc21">Barbecue Chicken</string>
    <string name="bbc">A flavour of barbeque chicken spiked with onions</string>
    <string name="bbcp">Rs 240</string>
    <string name="Button31">ORDER</string>
    <string name="title_activity_main_activity2012">Non Veg Extra</string>
    <string name="Desc22">Non Veg Extra</string>
    <string name="nve">This is as loaded as it gets, folkes! There is hot and spicy chicken, ham and keema with tangy black olives, onions, crisp capsicum and delectable mushrooms.</string>
    <string name="nvep">Rs 265</string>
    <string name="Button32">ORDER</string>
    <string name="title_activity_main_activity2013">Mexican Chicken</string>
    <string name="Desc23">Mexican Chicken</string>
    <string name="mx">The taste bud-tingling of hot and spicy chicken topped with chunky onion, juicy tomato, sizzling red pepper and sprinkling of exotic Mexican herb.</string>
    <string name="mxp">Rs 250</string>
    <string name="Button33">ORDER</string>
    <string name="title_activity_main_activity2014">Cheese N Barbecue</string>
    <string name="Desc24">Cheese N Barbecue</string>
    <string name="cnb">A thrill from the grill - barbeque chicken with generous topping of cheese.</string>
    <string name="cnbp">Rs 200</string>
    <string name="Button34">ORDER</string>
    <string name="title_activity_main_activity2021">VEGGIE MAGIC DUO</string>
    <string name="Desc30">VEGGIE MAGIC DUO</string>
    <string name="vmd">Tomato and Corn,Green Capsicum and Corn Onion,Tomato and Green Chillies,Paneer and Green Capsicum.</string>
    <string name="vmdp">Rs 275</string>
    <string name="Button40">ORDER</string>
    <string name="title_activity_main_activity2022">MIXED MAGIC DUO</string>
    <string name="Desc31">MIXED MAGIC DUO</string>
    <string name="mmd">Onion, Tomato and Green Chillies,Paneer and Capsicum,Chunks of Chicken and Tomato,Chunks of Chicken and Green Capsicum.</string>
    <string name="mmdp">Rs 315</string>
    <string name="Button41">ORDER</string>
    <string name="title_activity_main_activity2023">Meal For 4</string>
    <string name="Desc32">Meal For 4</string>
    <string name="m4">2 Medium Pizzas + Any Garlic Bread + Any 2 Desserts.</string>
    <string name="m4p">Rs 669</string>
    <string name="Button42">ORDER</string>
    <string name="title_activity_main_activity2024">Meal For 2</string>
    <string name="Desc33">Meal For 2</string>
    <string name="m2">Medium Pizza + Any Garlic Bread + Pepsi.</string>
    <string name="m2p">Rs 429</string>
    <string name="Button43">ORDER</string>
    <string name="title_activity_main_activity2025">The Big Meal</string>
    <string name="Desc34">The Big Meal</string>
    <string name="tbm">Any Veg Big Pizza + Any Garlic Bread + Any Drink.</string>
    <string name="tbmp">Rs 299</string>
    <string name="Button44">ORDER</string>
    <string name="title_activity_main_activity2026">Hut Meal Deal</string>
    <string name="Desc35">Hut Meal Deal</string>
    <string name="hmd">Any Medium Pizza + Any Garlic Bread + Any Dessert.</string>
    <string name="hmdp">Rs 499</string>
    <string name="Button45">ORDER</string>
    <string name="title_activity_main_activity7">MainActivity7</string>

</resources>
